Page MenuHome GnuPG

card: New field to specify refusing operations when card/token is not available
Closed, ResolvedPublic

Description

Current behavior of using card key for ssh:
For SSH, when "Confirm:" is not specified, it doesn't prompt the card insertion, but simply fails.

Just like that, a user would want failure for cryptographic operation requested to gpg-agent, not being asked by dialog box.

New field Prompt: <yes|no> is good.